--- a/style/style.css
+++ b/style/style.css
@@ -27,7 +27,7 @@ body {
       background-color: #555;
       color: white;
       padding: 0.25%;
-      margin-top: 19px;
+      margin-top: 0.7%;
     }
     
     /* On small screens, set height to 'auto' for sidenav and grid */
